<resources>
    <string name="app_name">MyHealth</string>
    <string name="title_text">MyHealth</string>
    <string name="hint_food">What did you eat?</string>
    <string name="hint_calories">Enter Calories</string>
    <string name="submit_text">Submit</string>
    <string name="delete_item">Delete Item</string>
    <string name="share_title">Share</string>
    <string name="food_total_text">Total Calories:</string>
    <string name="cal_text">Cal</string>
    <string name="food_items_num">Food Items:</string>
    <string name="github">github.com/bmkpot</string>
    <string name="food_items_name">Mkpot</string>
    <string name="calories_text">Calories:</string>
    <string name="calories_value_text">180</string>
    <string name="consumed_date_text">Consumed Date</string>
    <string name="text_view">|</string>
    <string name="name_text_view">Name Of Food</string>
    <string name="date_text">Date text</string>
    <string name="calories_text_view">110</string>
    <string name="share_bt_text">SHARE</string>
    <string name="search">Search</string>
    <string name="scanner">Scanner</string>
    <string name="home">Home</string>
    <string name="displayfood">DisplayFood</string>

</resources>
